frontend/src/components/HomeSearch/HomeSearch.scss
.HomeSearch {
  background-color: #fff;
  width: 60vw;
  margin: 12rem auto;
  text-align: center;
  position: relative;
  z-index: 1;
  border-radius: 20px;
  border: 3px solid black;
  animation: boxIn 0.4s ease-in;
  padding-bottom: 5rem;

  &__Title {
    font-size: 8rem;
    line-height: 1;
    margin-top: 3rem;
    margin-bottom: 4rem;
    margin: 3rem 0 3rem;
  }

  &__Search {
    position: relative;
    display: inline-block;
  }

  &__Input {
    width: 50vw;
    height: 6rem;
  }

  &__Placeholder {
    position: absolute;
    pointer-events: none;
    white-space: nowrap;
    text-align: left;
    font-size: 2.5rem;
    font-family: inherit;
    width: 100%;
    padding-left: 3.3rem;
    color: rgb(144, 144, 144);
    top: 0.8rem;
    left: 0;

    &--Suggestion {
      font-size: 4rem;
      display: inline-block;

      &.enter {
        animation: textIn 0.3s ease-in;
      }

      &.exit {
        animation: textOut 0.1s linear;
      }
    }
  }

  &__Submit {
    padding-top: 4rem;
  }
}

@keyframes textIn {
  0% {
    transform: translateY(-5rem);
    opacity: 0;
  }

  80% {
    transform: translateY(0.5rem);
  }

  100% {
    transform: translateY(0);
    opacity: 1;
  }
}

@keyframes textOut {
  from {
    transform: translateY(0);
    opacity: 1;
  }

  to {
    transform: translateY(5rem);
    opacity: 0;
  }
}

@keyframes boxIn {
  0% {
    opacity: 0.5;
    transform: translateY(3rem);
  }

  100% {
    opacity: 1;
    transform: translateY(0);
  }
}

